--- a/flash/templates/flash/base.html
+++ b/flash/templates/flash/base.html
@@ -49,6 +49,29 @@
             .invis{
                 display: none;
             }
+            .container-c {
+                position: relative;
+            }
+            .center {
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+            }
+            div.form
+            {
+                display: block;
+                text-align: center;
+            }
+            form
+            {
+                display: inline-block;
+                margin-left: auto;
+                margin-right: auto;
+                text-align: left;
+            }
         </style>
         {% include 'flash/navbar.html' %}
         {% block content %}
