--- a/flash/templates/flash/card_admin.html
+++ b/flash/templates/flash/card_admin.html
@@ -1,4 +1,75 @@
 {% extends 'flash/base.html' %}
 {% block content %}
-
+    {% csrf_token %}
+    <div class="form">
+        <form>
+            <div class="form-group">
+                <label for="question">Create Question</label>
+                <input type="text" class="form-control" id="question" placeholder="Enter question">
+            </div>
+            <div class="form-group">
+                <label for="answer">Create Answer</label>
+                <input type="text" class="form-control" id="answer" placeholder="Enter answer">
+            </div>
+            <div class="container-c">
+                <div class="center mt-3">
+                    <button class="btn btn-primary" onClick="create();">Create</button>
+                </div>
+            </div>
+        </form>
+    </div><br><br>
+    <div style="display: inline-block !important; margin: auto !important;">
+        {% for card in flashcards %}
+            <div style="display: inline-block !important;">
+                <div class="card d-flex justify-content-center align-items-center">
+                    <div class="card-inner " style="align-items:center">
+                        <div class="card-front">
+                            <h1 id="question">{{ card.question}}</h1>
+                        </div>
+                        <div class="card-back">
+                            <h1 id="answer">{{ card.answer }}</h1>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary mb-2" style="text-align:center;max-width:200px;">Show definition</button>
+                </div>
+                <button class="btn btn-danger mb-2" onClick="del({{card.pk}});">Delete</button>
+            </div>
+        {% endfor %}
+    </div>
+    <script>
+        $(document).ready(function() {
+            $('.card').click(function() {
+                $(this).toggleClass('card-flipped');
+            });
+        });
+        function del(pk){
+            console.log("Deleting card with id: " + pk)
+            $.ajax({
+                type: "POST",
+                url: '{% url 'card-admin-delete' %}',
+                data: {
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    'flashcard_id': pk
+                },
+                success: function() {
+                    location.reload();
+                }
+            });
+        }
+        function create(){
+            console.log("Creating card with question: " + $('#question').val() + " and answer: " + $('#answer').val())
+            $.ajax({
+                type: "POST",
+                url: '{% url 'card-admin-create' %}',
+                data: {
+                    'csrfmiddlewaretoken': '{{ csrf_token }}',
+                    'question': $('#question').val(),
+                    'answer': $('#answer').val()
+                },
+                success: function() {
+                    location.reload();
+                }
+            });
+        }
+    </script>
 {%endblock%}
