--- a/flash/templates/flash/base.html
+++ b/flash/templates/flash/base.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <style>
+
+            h1{
+                text-align: center;
+            }
+
             .card {
                 border: 1px solid black;
                 border-radius: 10px;
