--- a/flash/templates/flash/card_admin.html
+++ b/flash/templates/flash/card_admin.html
@@ -18,7 +18,7 @@
             </div>
         </form>
     </div><br><br>
-    <div style="display: inline-block !important; margin: auto !important;">
+    <div style="text-align: center;">
         {% for card in flashcards %}
             <div style="display: inline-block !important;">
                 <div class="card d-flex justify-content-center align-items-center">
@@ -32,10 +32,11 @@
                     </div>
                     <button class="btn btn-primary mb-2" style="text-align:center;max-width:200px;">Show definition</button>
                 </div>
-                <button class="btn btn-danger mb-2" onClick="del({{card.pk}});">Delete</button>
+                <button class="btn btn-success mt-2 mb-2" onClick="update({{card.pk}});" style="text-align:center;max-width:200px;">Update</button>
+                <button class="btn btn-danger mb-2 mt-2" onClick="del({{card.pk}});">Delete</button>
             </div>
         {% endfor %}
-    </div>
+    </div>    
     <script>
         $(document).ready(function() {
             $('.card').click(function() {
@@ -57,6 +58,10 @@
             });
         }
         function create(){
+            if ($('#question').val() == "" || $('#answer').val() == ""){
+                alert("Please fill out both fields");
+                return;
+            }
             console.log("Creating card with question: " + $('#question').val() + " and answer: " + $('#answer').val())
             $.ajax({
                 type: "POST",
@@ -70,6 +75,10 @@
                     location.reload();
                 }
             });
+        }
+        function update(pk){
+            // going to make ajax call in the update template
+            location.href = "{% url 'card-admin-update' 0 %}".replace('0', pk);
         }
     </script>
 {%endblock%}
