fully functioning login system

--- a/flash/templates/flash/base.html
+++ b/flash/templates/flash/base.html
@@ -79,6 +79,13 @@
             }
         </style>
         {% include 'flash/navbar.html' %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{message.tags}}">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}
 
         {% endblock %}
