--- a/flash/static/flash/flash.css
+++ b/flash/static/flash/flash.css
@@ -1,36 +1,76 @@
+h1{
+  text-align: center;
+}
+
+p { 
+  margin:0;
+}
+
 .card {
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 300px;
-    height: 200px;
-    perspective: 1000px;
-    cursor: pointer;
-  }
-  
-  .card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-  }
-  
-  .card-front, .card-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    box-sizing: border-box;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .card-back {
-    transform: rotateY(180deg);
-  }
-  
-  .card-flipped .card-inner {
-    transform: rotateY(180deg);
-  }
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 500px;
+  height: 300px;
+  cursor: pointer;
+  /* give this a shadow */
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  /* give some margin for the sides */
+  margin: 10px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.1s;
+  transform-style: preserve-3d;
+}
+
+.card-front, .card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  box-sizing: border-box;
+  padding: 20px;
+  text-align: center;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.card-flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.invis{
+  display: none;
+}
+
+.container-c {
+  position: relative;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+div.form{
+  display: block;
+  text-align: center;
+}
+
+form{
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
