--- a/flash/templates/flash/base.html
+++ b/flash/templates/flash/base.html
@@ -6,78 +6,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         {%load static%}
-        <link rel="stylesheet" type="text/css" href="{% static 'flash/flash.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="../static/flash/flash.css"/>
     </head>
     <body>
-        <style>
-
-            h1{
-                text-align: center;
-            }
-
-            .card {
-                border: 1px solid black;
-                border-radius: 10px;
-                width: 500px;
-                height: 300px;
-                cursor: pointer;
-            }
-              
-            .card-inner {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                transition: transform 0.1s;
-                transform-style: preserve-3d;
-            }
-              
-            .card-front, .card-back {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                backface-visibility: hidden;
-                box-sizing: border-box;
-                padding: 20px;
-                text-align: center;
-            }
-              
-            .card-back {
-                transform: rotateY(180deg);
-            }
-              
-            .card-flipped .card-inner {
-                transform: rotateY(180deg);
-            }
-
-            .invis{
-                display: none;
-            }
-            .container-c {
-                position: relative;
-            }
-            .center {
-                margin: 0;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                -ms-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
-            }
-            div.form
-            {
-                display: block;
-                text-align: center;
-            }
-            form
-            {
-                display: inline-block;
-                margin-left: auto;
-                margin-right: auto;
-                text-align: left;
-            }
-        </style>
         {% include 'flash/navbar.html' %}
         {% if messages %}
             {% for message in messages %}
