--- a/flash/templates/flash/hard_to_remember.html
+++ b/flash/templates/flash/hard_to_remember.html
@@ -8,10 +8,12 @@
             <div class="card d-flex justify-content-center align-items-center">
                 <div class="card-inner " style="align-items:center">
                     <div class="card-front">
-                        <h1 id="question">{{ card.question}}</h1>
+                        <p>Question</p>
+                        <h2 id="question">{{ card.question}}</h2>
                     </div>
                     <div class="card-back">
-                        <h1 id="answer">{{ card.answer }}</h1>
+                        <p>Definition</p>
+                        <h2 id="answer">{{ card.answer }}</h2>
                     </div>
                 </div>
                 <button class="btn btn-primary mb-2" style="text-align:center;max-width:200px;">Show definition</button>
