--- a/flash/templates/flash/card_admin.html
+++ b/flash/templates/flash/card_admin.html
@@ -4,11 +4,11 @@
     <div class="form">
         <form>
             <div class="form-group">
-                <label for="question">Create Question</label>
+                <label for="question">Create Word</label>
                 <input type="text" class="form-control" id="question" placeholder="Enter question">
             </div>
             <div class="form-group">
-                <label for="answer">Create Answer</label>
+                <label for="answer">Create Definition</label>
                 <input type="text" class="form-control" id="answer" placeholder="Enter answer">
             </div>
             <div class="container-c">
@@ -29,7 +29,7 @@
                 <div class="card d-flex justify-content-center align-items-center">
                     <div class="card-inner " style="align-items:center">
                         <div class="card-front">
-                            <p>Question</p>
+                            <p>Word</p>
                             <h2 id="question">{{ card.question}}</h2>
                         </div>
                         <div class="card-back">
