--- a/flash/templates/flash/hard_to_remember.html
+++ b/flash/templates/flash/hard_to_remember.html
@@ -8,7 +8,7 @@
             <div class="card d-flex justify-content-center align-items-center">
                 <div class="card-inner " style="align-items:center">
                     <div class="card-front">
-                        <p>Question</p>
+                        <p>Word</p>
                         <h2 id="question">{{ card.question}}</h2>
                     </div>
                     <div class="card-back">
