--- a/flash/static/flash/flash.css
+++ b/flash/static/flash/flash.css
@@ -39,6 +39,18 @@ p {
   box-sizing: border-box;
   padding: 20px;
   text-align: center;
+  /* allow scrolling */
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.card-back::-webkit-scrollbar {
+  display: none;
+}
+
+.card-front::-webkit-scrollbar {
+  display: none;
 }
 
 .card-back {
@@ -69,6 +81,7 @@ p {
 div.form{
   display: block;
   text-align: center;
+  margin-top: 20px;
 }
 
 form{
