--- a/flash/templates/flash/base.html
+++ b/flash/templates/flash/base.html
@@ -1,6 +1,10 @@
 <html>
     <head>
-        <title>Flashcard App</title>
+        {% if request.user.is_authenticated %}
+            <title>{{request.user.username}}'s flashcards</title>
+        {%else%}
+            <title>Flashcard App</title>
+        {%endif%}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
