--- a/flash/templates/flash/card_admin.html
+++ b/flash/templates/flash/card_admin.html
@@ -17,7 +17,8 @@
                 </div>
             </div>
         </form>
-    </div><br><br>
+    </div><br>
+    <hr>
     {% if flashcards|length > 0%}
     <div style="text-align:center;" class="mt-3 mb-3">
         <button class="btn btn-primary" onClick="location.href='{% url 'flash-card-home' %}'">Start Studying</button>
