--- a/flash/static/flash/flash.css
+++ b/flash/static/flash/flash.css
@@ -11,25 +11,29 @@ p {
   margin:0;
 }
 
-.card {
-  border: 1px solid black;
-  border-radius: 10px;
+.flip-card {
   width: 500px;
   height: 300px;
   cursor: pointer;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
   margin: 10px;
+  perspective: 1000px;
 }
 
-.card-inner {
+.flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
-  transition: transform 0.1s;
+  text-align: center;
+  transition: transform 0.6s;
   transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.card-front, .card-back {
+.flip-card-inner.flipped {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
   position: absolute;
   top: 0;
   left: 0;
@@ -39,25 +43,25 @@ p {
   box-sizing: border-box;
   padding: 20px;
   text-align: center;
-  /* allow scrolling */
   overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
 
-.card-back {
+.flip-card-front {
+  background-color: #d8d7d7;
+}
+
+.flip-card-back {
+  background-color: #d8d7d7;
   transform: rotateY(180deg);
 }
 
-.card-flipped .card-inner {
-  transform: rotateY(180deg);
-}
-
-.card-back::-webkit-scrollbar {
+.flip-card-back::-webkit-scrollbar {
   display: none;
 }
 
-.card-front::-webkit-scrollbar {
+.flip-card-front::-webkit-scrollbar {
   display: none;
 }
 
@@ -89,4 +93,13 @@ form{
   margin-left: auto;
   margin-right: auto;
   text-align: left;
+}
+
+.definition-btn{
+  text-align:center;
+  max-width:200px;
+  position:absolute;
+  bottom:5;
+  left:50%;
+  transform:translateX(-50%);
 }
