--- a/flash/templates/flash/hard_to_remember.html
+++ b/flash/templates/flash/hard_to_remember.html
@@ -5,25 +5,26 @@
     {% endif %}
     {% for card in flashcards_json %}
         <div class="d-flex justify-content-center align-items-center mt-3">
-            <div class="card d-flex justify-content-center align-items-center">
-                <div class="card-inner " style="align-items:center">
-                    <div class="card-front">
+            <div class="flip-card d-flex justify-content-center align-items-center">
+                <div class="flip-card-inner " style="align-items:center">
+                    <div class="flip-card-front">
                         <p>Word</p>
                         <h2 id="question">{{ card.question}}</h2>
+                        <button class="btn btn-primary mb-2 definition-btn">Show definition</button>
                     </div>
-                    <div class="card-back">
+                    <div class="flip-card-back">
                         <p>Definition</p>
                         <h2 id="answer">{{ card.answer }}</h2>
                     </div>
                 </div>
-                <button class="btn btn-primary mb-2" style="text-align:center;max-width:200px;">Show definition</button>
             </div>
         </div>
     {% endfor %}
     <script>
         $(document).ready(function() {
-            $('.card').click(function() {
-                $(this).toggleClass('card-flipped');
+            $('.flip-card').click(function() {
+                $(this).find('.flip-card-inner').toggleClass('flipped');
+                $('#showbtns').fadeToggle();
             });
         });
     </script>
